# qtgarden

./: .gitignore  CMakeLists.txt  CalculatorModel.cpp  CalculatorModel.h  README.md  main.cpp  main.qml  qml.qrc  qtgarden.pro
qml/: Calculator.qml  TodoList.qml  listview.qml  main.qml
src/: CalculatorModel.cpp  CalculatorModel.h  TodoListModel.cpp  TodoListModel.h  main.cpp
